--- a/src/app/MusteriDetay/musteri_detay.component.html
+++ b/src/app/MusteriDetay/musteri_detay.component.html
@@ -47,6 +47,7 @@
               <span>{{ musteri_detay.adi }} {{ musteri_detay.soyadi }}</span>
             </div>
           </div>
+          <!-- TC NO -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
               <span>TC NO</span>
@@ -58,6 +59,23 @@
               <span>{{ musteri_detay.tc_no }}</span>
             </div>
           </div>
+          <!-- TC NO -->
+          
+          <!-- Doğum Tarihi -->
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Doğum Tarihi</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <span>{{ musteri_detay.dogum_tarihi }}</span>
+            </div>
+          </div>
+          <!-- Doğum Tarihi -->
+
+          <!-- Eposta Adresi -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
               <span>Eposta Adresi</span>
@@ -69,6 +87,9 @@
               <span>{{ musteri_detay.eposta_adresi }}</span>
             </div>
           </div>
+          <!-- Eposta Adresi -->
+
+          <!-- Telefon Numarası -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
               <span>Telefon Numarası</span>
@@ -80,6 +101,8 @@
               <span class="musteri-detay-tel-no">{{ musteri_detay.telefon_numarasi }}</span>
             </div>
           </div>
+          <!-- Telefon Numarası -->
+          <!-- Faks Numarası -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
               <span>Faks Numarası</span>
@@ -91,6 +114,9 @@
               <span>{{ musteri_detay.faks_numarasi }}</span>
             </div>
           </div>
+          <!-- Faks Numarası -->
+
+          <!-- Kayıt Şubesi -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
               <span>Kayıt Şube</span>
@@ -102,6 +128,9 @@
               <a href="#" class="musteri-detay-kayit-sube-text">{{ musteri_detay.kayit_sube.sube_adi }}</a>
             </div>
           </div>
+          <!-- Kayıt Şubesi -->
+
+          <!-- Açık Adresi -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
               <span>Açık Adres</span>
@@ -113,7 +142,10 @@
               <p>{{ musteri_detay.acik_adresi }}</p>
             </div>
           </div>
+          <!-- Açık Adresi -->
         </div>
+        
+
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
           <div class="panel-footer-left-block">
@@ -199,75 +231,6 @@
         <div class="panel-body padding-0">
           <!-- Tab -->
           <tabset>
-            <!-- Ödemeler -->
-            <tab heading="Ödemeler" customClass="tab-ozel">
-              <div class="tab-page-content">
-                <ul class="odeme-listele-tab">
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </tab>
-            <!-- Ödemeler -->
-
             <!-- Notlar -->
             <tab heading="Notlar" customClass="tab-ozel">
               <div class="tab-page-content">
